# viewmodels/request/multibanda_resume.go
@@ -17,6 +17,7 @@ type MultibandaResume struct {
 	UnderEndDate      time.Time `json:"under_end_date"`
 	CompletedDate           time.Time `json:"completed_date"`
 	Status                  int       `json:"status"`
+	CertificateNumber       string    `json:"certificate_number"`
 	TestReportUrl           string    `json:"test_report_url"`
 	MultibandCertificateUrl string    `json:"multiband_certificate_url"`
 	IsInternalProject       bool      `json:"is_internal_project,omitempty"`
@@ -43,6 +44,7 @@ type MultibandaNotify struct {
 	UnderEndDate            time.Time
 	CompletedDate           time.Time
 	Status                  int
+	CertificateNumber       string
 	TestReportUrl           string
 	MultibandCertificateUrl string
 	IsInternalProject       bool
