# viewmodels/request/shipment_control_resume.go
@@ -1,0 +1,47 @@
+package request
+
+
+
+import "time"
+
+
+
+type ShipmentControlResume struct {
+
+	CurrentPhase            int       `json:"current_phase"`
+
+	ValidationStartDate     time.Time `json:"validation_start_date"`
+
+	ValidationEndDate       time.Time `json:"validation_end_date"`
+
+	UnderRevisionStartDate  time.Time `json:"under_revision_start_date"`
+
+	UnderRevisionEndDate    time.Time `json:"under_revision_end_date"`
+
+	CompletedDate           time.Time `json:"completed_date"`
+
+	ImeiQuantity            int       `json:"imei_quantity"`
+
+	RegisteredImeiCount     int       `json:"registered_imei_count"`
+
+	ReworkNumber            string    `json:"rework_number"`
+
+	OabiCertificate         string    `json:"oabi_certificate"`
+
+	Client                  string    `json:"client"`
+
+	Country                 string    `json:"country"`
+
+	SubtelCertificateUrl    string    `json:"subtel_certificate_url"`
+
+	SubtelCertificateNumber string    `json:"subtel_certificate_number"`
+
+	OabiCertificateUrl      string    `json:"oabi_certificate_url"`
+
+	OabiCertificateNumber   string    `json:"oabi_certificate_number"`
+
+	Comment                 string    `json:"comment"`
+
+}
+
+
